// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`service:check formatHumanReadable should have correct output with breaking and non-breaking changes 1`] = `
"
FAIL    ARG_REMOVED                \`ServiceMutation.uploadSchema\` arg \`gitContext\` was removed
FAIL    ARG_REMOVED                \`ServiceMutation.uploadSchema\` arg \`schema\` was removed
FAIL    ARG_REMOVED                \`ServiceMutation.uploadSchema\` arg \`tag\` was removed
FAIL    FIELD_CHANGED_TYPE         \`Change.argNode\` changed type from \`NamedIntrospectionArg\` to \`NamedIntrospectionValue\`
FAIL    FIELD_REMOVED              \`Change.affectedClients\` was removed
FAIL    FIELD_REMOVED              \`NamedIntrospectionValue.printedType\` was removed
FAIL    TYPE_REMOVED               \`NamedIntrospectionArg\` removed

PASS    ARG_REMOVED                \`ServiceMutation.registerOperations\` arg \`manifestVersion\` was removed
PASS    ARG_REMOVED                \`ServiceMutation.uploadSchema\` arg \`historicParameters\` was removed
PASS    FIELD_ADDED                \`Service.schemaNotificationChannels\` was added
PASS    FIELD_ADDED                \`ServiceMutation.deregisterSchemaNotificationChannel\` was added
PASS    FIELD_ADDED                \`ServiceMutation.registerSchemaNotificationChannel\` was added
PASS    FIELD_DEPRECATION_REMOVED  \`AffectedClient.clientId\` is no longer deprecated
PASS    FIELD_DEPRECATION_REMOVED  \`Change.description\` is no longer deprecated
PASS    FIELD_REMOVED              \`AffectedClient.clientReferenceId\` was removed
PASS    FIELD_REMOVED              \`Change.affectedClientIdVersionPairs\` was removed
PASS    FIELD_REMOVED              \`Change.affectedClientReferenceIds\` was removed
PASS    FIELD_REMOVED              \`SchemaDiff.numberOfCheckedOperations\` was removed

View full details at: https://engine-dev.apollographql.com/service/engine/checks?schemaTag=Detached%3A%20d664f715645c5f0bb5ad4f2260cd6cb8d19bbc68&schemaTagId=f9f68e7e-1b5f-4eab-a3da-1fd8cd681111&from=2019-03-26T22%3A25%3A12.887Z"
`;

exports[`service:check formatHumanReadable should have correct output with only breaking changes 1`] = `
"
FAIL    ARG_REMOVED         \`ServiceMutation.uploadSchema\` arg \`gitContext\` was removed
FAIL    ARG_REMOVED         \`ServiceMutation.uploadSchema\` arg \`schema\` was removed
FAIL    ARG_REMOVED         \`ServiceMutation.uploadSchema\` arg \`tag\` was removed
FAIL    FIELD_CHANGED_TYPE  \`Change.argNode\` changed type from \`NamedIntrospectionArg\` to \`NamedIntrospectionValue\`
FAIL    FIELD_REMOVED       \`Change.affectedClients\` was removed
FAIL    FIELD_REMOVED       \`NamedIntrospectionValue.printedType\` was removed
FAIL    TYPE_REMOVED        \`NamedIntrospectionArg\` removed

View full details at: https://engine-dev.apollographql.com/service/engine/checks?schemaTag=Detached%3A%20d664f715645c5f0bb5ad4f2260cd6cb8d19bbc68&schemaTagId=f9f68e7e-1b5f-4eab-a3da-1fd8cd681111&from=2019-03-26T22%3A25%3A12.887Z"
`;

exports[`service:check formatHumanReadable should have correct output with only non-breaking changes 1`] = `
"
No changes present between schemas

View full details at: https://engine-dev.apollographql.com/service/engine/checks?schemaTag=Detached%3A%20d664f715645c5f0bb5ad4f2260cd6cb8d19bbc68&schemaTagId=f9f68e7e-1b5f-4eab-a3da-1fd8cd681111&from=2019-03-26T22%3A25%3A12.887Z"
`;

exports[`service:check integration federated should report composition errors correctly vanilla 1`] = `
"
Service   Field    Message
────────  ───────  ────────────────────────────────────────────────────────────────────────────────────────
reviews   User.id  marked @external but it does not have a matching field on on the base service (accounts)
reviews   User     A @key selects id, but User.id could not be found
accounts  User     A @key selects id, but User.id could not be found
  ✔ Loading Apollo Project
  ✖ Found 3 graph composition errors for service accounts on graph engine
    → Federated service composition was unsuccessful. Please see the reasons below.
    Validating composed schema against tag master on graph engine
    Comparing schema changes
    Reporting result
"
`;

exports[`service:check integration federated should report composition success correctly vanilla 1`] = `
"  ✔ Loading Apollo Project
  ✔ Found 0 graph composition errors for service accounts on graph engine
  ⠙ Validating composed schema against tag master on graph engine
    Comparing schema changes
    Reporting result
  ✔ Loading Apollo Project
  ✔ Found 0 graph composition errors for service accounts on graph engine
  ⠹ Validating composed schema against tag master on graph engine
    Comparing schema changes
    Reporting result
  ✔ Loading Apollo Project
  ✔ Found 0 graph composition errors for service accounts on graph engine
  ⠸ Validating composed schema against tag master on graph engine
    Comparing schema changes
    Reporting result
  ✔ Loading Apollo Project
  ✔ Found 0 graph composition errors for service accounts on graph engine
  ⠼ Validating composed schema against tag master on graph engine
    → Validating schema
    Comparing schema changes
    Reporting result
  ✔ Loading Apollo Project
  ✔ Found 0 graph composition errors for service accounts on graph engine
  ✔ Validated composed schema against tag master on graph engine
  ✔ Compared 1 schema change against 0 operations over the last 548 days
  ✔ Found 0 breaking changes and 1 compatible change

PASS    ARG_CHANGED_TYPE  \`Query.launches\` argument \`after\` has changed type from \`String\` to \`String!\`

View full details at: https://engine-staging.apollographql.com/service/justin-fullstack-tutorial/check/3acd7765-61b2-4f1a-9227-8b288e42bfdc
"
`;

exports[`service:check integration non-federated should report traffic errors correctly --json 1`] = `
"{
  \\"targetUrl\\": \\"https://engine-staging.apollographql.com/service/justin-fullstack-tutorial/check/3acd7765-61b2-4f1a-9227-8b288e42bfdc\\",
  \\"changes\\": [
    {
      \\"severity\\": \\"FAILURE\\",
      \\"code\\": \\"ARG_CHANGED_TYPE\\",
      \\"description\\": \\"\`Query.launches\` argument \`after\` has changed type from \`String\` to \`String!\`\\"
    }
  ],
  \\"validationConfig\\": {
    \\"from\\": \\"-47347200\\",
    \\"to\\": \\"-0\\",
    \\"queryCountThreshold\\": 1,
    \\"queryCountThresholdPercentage\\": 0
  }
}
"
`;

exports[`service:check integration non-federated should report traffic errors correctly --markdown 1`] = `
"
### Apollo Service Check
🔄 Validated your local schema against schema tag \`master\` on graph \`engine\`.
🔢 Compared **1 schema change** against **0 operations** seen over the **last 548 days**.
❌ Found **1 breaking change** that would affect **0 operations** across **0 clients**

🔗 [View your service check details](https://engine-staging.apollographql.com/service/justin-fullstack-tutorial/check/3acd7765-61b2-4f1a-9227-8b288e42bfdc).

"
`;

exports[`service:check integration non-federated should report traffic errors correctly vanilla 1`] = `
"  ✔ Loading Apollo Project
  ⠙ Validating schema against tag master on graph engine
    → Resolving schema
    Comparing schema changes
    Reporting result
  ✔ Loading Apollo Project
  ⠹ Validating schema against tag master on graph engine
    → Validating schema
    Comparing schema changes
    Reporting result
  ✔ Loading Apollo Project
  ⠸ Validating schema against tag master on graph engine
    → Validating schema
    Comparing schema changes
    Reporting result
  ✔ Loading Apollo Project
  ✔ Validated schema against tag master on graph engine
  ✔ Compared 1 schema change against 0 operations over the last 548 days
  ✖ Found 1 breaking change and 0 compatible changes
    → breaking changes found

FAIL    ARG_CHANGED_TYPE  \`Query.launches\` argument \`after\` has changed type from \`String\` to \`String!\`

View full details at: https://engine-staging.apollographql.com/service/justin-fullstack-tutorial/check/3acd7765-61b2-4f1a-9227-8b288e42bfdc
"
`;

exports[`service:check integration non-federated should report traffic non-errors correctly --json 1`] = `
"{
  \\"targetUrl\\": \\"https://engine-staging.apollographql.com/service/justin-fullstack-tutorial/check/3acd7765-61b2-4f1a-9227-8b288e42bfdc\\",
  \\"changes\\": [
    {
      \\"severity\\": \\"NOTICE\\",
      \\"code\\": \\"ARG_CHANGED_TYPE\\",
      \\"description\\": \\"\`Query.launches\` argument \`after\` has changed type from \`String\` to \`String!\`\\"
    }
  ],
  \\"validationConfig\\": {
    \\"from\\": \\"-47347200\\",
    \\"to\\": \\"-0\\",
    \\"queryCountThreshold\\": 1,
    \\"queryCountThresholdPercentage\\": 0
  }
}
"
`;

exports[`service:check integration non-federated should report traffic non-errors correctly --markdown 1`] = `
"
### Apollo Service Check
🔄 Validated your local schema against schema tag \`master\` on graph \`engine\`.
🔢 Compared **1 schema change** against **0 operations** seen over the **last 548 days**.
✅ Found **no breaking changes**.

🔗 [View your service check details](https://engine-staging.apollographql.com/service/justin-fullstack-tutorial/check/3acd7765-61b2-4f1a-9227-8b288e42bfdc).

"
`;

exports[`service:check integration non-federated should report traffic non-errors correctly vanilla 1`] = `
"  ✔ Loading Apollo Project
  ⠙ Validating schema against tag master on graph engine
    → Resolving schema
    Comparing schema changes
    Reporting result
  ✔ Loading Apollo Project
  ⠹ Validating schema against tag master on graph engine
    → Validating schema
    Comparing schema changes
    Reporting result
  ✔ Loading Apollo Project
  ✔ Validated schema against tag master on graph engine
  ✔ Compared 1 schema change against 0 operations over the last 548 days
  ✔ Found 0 breaking changes and 1 compatible change

PASS    ARG_CHANGED_TYPE  \`Query.launches\` argument \`after\` has changed type from \`String\` to \`String!\`

View full details at: https://engine-staging.apollographql.com/service/justin-fullstack-tutorial/check/3acd7765-61b2-4f1a-9227-8b288e42bfdc
"
`;

exports[`service:check markdown formatting is correct with breaking changes 1`] = `
"
### Apollo Service Check
🔄 Validated your local schema against schema tag \`staging\` on graph \`engine\`.
🔢 Compared **18 schema changes** against **100 operations** seen over the **last 24 hours**.
❌ Found **7 breaking changes** that would affect **3 operations** across **2 clients**

🔗 [View your service check details](https://engine-dev.apollographql.com/service/engine/checks?schemaTag=Detached%3A%20d664f715645c5f0bb5ad4f2260cd6cb8d19bbc68&schemaTagId=f9f68e7e-1b5f-4eab-a3da-1fd8cd681111&from=2019-03-26T22%3A25%3A12.887Z).
"
`;

exports[`service:check markdown formatting is correct with breaking changes 2`] = `
"
### Apollo Service Check
🔄 Validated your local schema against schema tag \`staging\` on graph \`engine\`.
🔢 Compared **1 schema change** against **1 operation** seen over the **last 24 hours**.
❌ Found **1 breaking change** that would affect **1 operation** across **1 client**

🔗 [View your service check details](https://engine-dev.apollographql.com/service/engine/checks?schemaTag=Detached%3A%20d664f715645c5f0bb5ad4f2260cd6cb8d19bbc68&schemaTagId=f9f68e7e-1b5f-4eab-a3da-1fd8cd681111&from=2019-03-26T22%3A25%3A12.887Z).
"
`;

exports[`service:check markdown formatting is correct with no breaking changes 1`] = `
"
### Apollo Service Check
🔄 Validated your local schema against schema tag \`staging\` on graph \`engine\`.
🔢 Compared **0 schema changes** against **100 operations** seen over the **last 24 hours**.
✅ Found **no breaking changes**.

🔗 [View your service check details](https://engine-dev.apollographql.com/service/engine/checks?schemaTag=Detached%3A%20d664f715645c5f0bb5ad4f2260cd6cb8d19bbc68&schemaTagId=f9f68e7e-1b5f-4eab-a3da-1fd8cd681111&from=2019-03-26T22%3A25%3A12.887Z).
"
`;

exports[`service:list integration should display non federated message for a non federated service vanilla 1`] = `
"Loading Apollo Project [started]
Loading Apollo Project [completed]
Fetching list of services for graph engine [started]
Fetching list of services for graph engine [completed]

There are no services on this federated graph
"
`;

exports[`service:list integration should list services correctly for a federated service vanilla 1`] = `
"Loading Apollo Project [started]
Loading Apollo Project [completed]
Fetching list of services for graph engine [started]
Fetching list of services for graph engine [completed]

accounts   http://localhost:4001/graphql  13 May 2019 (a month ago)
inventory  http://localhost:4002/graphql  16 May 2019 (a month ago)
products   http://localhost:4003/graphql  16 May 2019 (a month ago)
reviews    http://localhost:4004/graphql  16 May 2019 (a month ago)

View full details at: https://engine-staging.apollographql.com/service/engine/service-list
"
`;
